# vst-render

./: .gitignore  CLAUDE-implementation.md  CLAUDE.md  DESIGN.md  KNOWN_ISSUES.md  README.md  TODO.md  pyproject.toml
.claude/rules/: engineering.md
.github/workflows/: tests.yml
docs/: architecture.md  audit-log.md  decisions.md  git-workflow.md  implementation.md
fxp_render/: __init__.py  api.py  batch.py  cli.py  config.py  renderer.py  utils.py  worker.py
scripts/: _verify_loky_worker.py  profile_render_phases.py  stress_io_split.py  stress_memory_growth.py  stress_pool_init.py  stress_render_duration.py  stress_state_contamination.py  stress_throughput_workers.py  verify_dawdreamer.py  verify_dawdreamer_output.txt  verify_dawdreamer_serum2.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_filename.py  test_midi.py  test_parallel_smoke.py  test_presets.py  test_sanitize.py  test_serum2_smoke.py  test_worker.py
vst_render/: __init__.py  api.py  batch.py  cli.py  config.py  presets.py  renderer.py  worker.py
