[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fxp-render"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dawdreamer",
    "soundfile",
    "typer",
    "rich",
    "loky",
    "mido",
    "numpy",
]

[project.scripts]
fxp-render = "fxp_render.cli:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]

[tool.pytest.ini_options]
markers = ["slow: integration tests that require a plugin to be installed"]
